[gd_scene load_steps=4 format=3 uid="uid://cqhtliaqear0m"]

[ext_resource type="Theme" uid="uid://qry22usrno8o" path="res://resources/menu_theme.tres" id="1_gikcn"]
[ext_resource type="Script" uid="uid://dkuysoqw7ir71" path="res://scripts/UI/result_menu.gd" id="1_tkml0"]
[ext_resource type="AudioStream" uid="uid://b7ed7kntt84y0" path="res://resources/blipSelect.wav" id="3_bgmke"]

[node name="result_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gikcn")
script = ExtResource("1_tkml0")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.5
offset_top = -58.5
offset_right = 115.5
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ResultHeaderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "--Results--"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TimeHBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="TimeLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/TimeHBoxContainer"]
layout_mode = 2
text = "Time:"

[node name="TimeResultLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/TimeHBoxContainer"]
layout_mode = 2
text = "0:0:0"

[node name="AlertsHBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AlertsLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/AlertsHBoxContainer2"]
layout_mode = 2
text = "Alerts:"

[node name="AlertsResultLabel" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer/AlertsHBoxContainer2"]
layout_mode = 2
text = "0"

[node name="VBoxContainer2" type="VBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="GradeTime" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
alignment = 1

[node name="GradeAlert" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "A"

[node name="ButtonHBoxContainer3" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="NextButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonHBoxContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../MainMenuButton")
focus_neighbor_right = NodePath("../RestartButton")
text = "Next
"

[node name="RestartButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonHBoxContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../NextButton")
focus_neighbor_right = NodePath("../MainMenuButton")
text = "Restart"

[node name="MainMenuButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonHBoxContainer3"]
layout_mode = 2
focus_neighbor_left = NodePath("../RestartButton")
focus_neighbor_right = NodePath("../NextButton")
text = "Main Menu
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_bgmke")
volume_db = -20.0

[connection signal="focus_entered" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/NextButton" to="." method="_on_next_button_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/NextButton" to="." method="_on_next_button_mouse_entered"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/RestartButton" to="." method="_on_restart_button_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/MainMenuButton" to="." method="_on_main_menu_button_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/MainMenuButton" to="." method="_on_main_menu_button_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ButtonHBoxContainer3/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
